# content-aggregator-shared

./: .clinerules  .gitignore  .project-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py  test_rpa_engine.py
.github/workflows/: ci.yml
auth/: README.md  __init__.py  auth_middleware.py  auth_routes.py  config.py  jwt_handler.py
content_aggregator_shared/: AGENTS.md  __init__.py
content_aggregator_shared/shared/: __init__.py
content_aggregator_shared/shared/auth/: __init__.py  auth_middleware.py  auth_routes.py  jwt_handler.py  models.py
content_aggregator_shared/shared/proxy/: __init__.py  ip_pool.py
content_aggregator_shared/shared/rpa_engine/: __init__.py
content_aggregator_shared/shared/wechat_mp/: __init__.py  account_store.py  cli.py  image_gen.py  models.py
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md  auth.md  wechat_mp.md
examples/: usage_examples.py
references/: architecture.md  quality-gates.md  testing.md
rpa_engine/: anti_detection.py  base.py  browser_pool.py  cookie_manager.py
tests/: __init__.py  test_anti_detection.py  test_crypto.py  test_jwt_handler.py  test_models.py  test_publisher.py  test_wechat_api.py
wechat_mp/: __init__.py  account_store.py  converter.py  crypto.py  image_gen.py  models.py  publisher.py  wechat_api.py
