[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-aggregator-shared"
version = "0.1.0"
description = "Shared modules for content aggregator projects (001, 003, etc.)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "pyjwt>=2.8.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["content_aggregator_shared", "content_aggregator_shared.*"]
